--- a/src/TODO.txt
+++ b/src/TODO.txt
@@ -21,7 +21,9 @@
 
 - Find a way to pay the deposit back to a user on /books/return_it
 
+After release of the above changes:
 
+- Upgrade to CakePHP 2.4.x
 
 "Wish list" (you wish)
 
